# ServerlessValidator

./: .dockerignore  Dockerfile  Dockerfile.builder  LICENSE  README.md  ServerlessValidator.cabal  delete-zombie-docker-containers.hs  serverless-validator.hs  stack.yaml
Serverless/: README.md  Serverless.cabal
Serverless/app/: Main.hs
Serverless/src/: ServerlessValidator.hs
Serverless/test/: ServerlessValidatorSpec.hs
Serverless/test/fixtures/: serverless.yml
fixtures/: serverless.yml
src/: ServerlessValidator.hs
test/: ServerlessValidatorSpec.hs
test/fixtures/: serverless-bogus.yml
